--- a/README
+++ b/README
@@ -50,5 +50,5 @@ and (re)compiling the source code.
 
 Preview
 -------------
-![dwm_prev](https://github.com/adtyap26/dwm/dwm_prev.png)
+![dwm_prev.png](https://github.com/adtyap26/dwm/dwm_prev.png)
 
