--- a/README
+++ b/README
@@ -51,4 +51,5 @@ and (re)compiling the source code.
 Preview
 -------------
 ![dwm_prev.png](https://ibb.co/syRxxGt)
+![dwm_prev](https://github.com/adtyap26/dwm/blob/main/dwm_prev.png?raw=true)
 
